--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charest="UTF-8">
-        <title>MY FIRST PROJECT</title>
-    </head>
-    <BODY>
-        <H1>WELCOME</H1>
-        <P>THIS IS MY FIRST SIMPLE PAGE</P>
-    </BODY>
+<html>
+<head>
+    <meta charest="utf-8">
+    <title>MY PROFILE</title>
+</head>
+<BODY style="background-color: darkgrey;">
+<H1 style="text-align:center">Olivia Hanna</H1>
+<h2>About Me </h2>
+<p style="color: rgb(236, 63, 150)">Hi, I am <b>olivia Hanna</b>,<br> I am a student at computers and informatics<q> Minya university</q>.<br>I am intersted 
+    in learning AI and web and how to link AI to the websites.<br>
+</p>
+<img src="lofi-anime-girl.jpg" alt="anime girl" width="300">
+<hr style="color:darksalmon">
+
+<h2>My Goals</h2>
+<p style="color:rgb(210, 39, 124)">My goals is to be a professional in AI and to be a special one to get <b>My Dream Job.</b></p>
+<hr style="color:darksalmon">
+<h2>My Hobbies</h2>
+<ul style ="color:rgb(210, 75, 143)">
+    <li><i>Reading</i></li>
+    <li><i>Create content on the internet</i></li>
+    <li><i>Learning new things</i></li>
+</ul>
+<hr style="color:darksalmon">
+<h2>The Skils I Working On</h2>
+<ol  style="color:rgb(232, 71, 152)">
+    <li><i>soft skills</i></li>
+    <li><i>web developing</i></li>
+    <li><i>languages</i></li>
+</ol>
+<hr style="color:darksalmon">
+<h2>Contact Me</h2>
+<a href ="oliviahanna@gmail.com" style="color:rgb(210, 30, 144)">contanct me on email</a><br>
+<a href ="oliviahanna.facebook.com" style="color:rgb(148, 22, 98)">follow me on facebook</a>
+
+</BODY>
 </html>
