--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <html>
+  <head>
     <meta charset="utf-8">
     <title>LUXOR</title>
-   <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="icon" type="image/jpg" href="temple.jpg">
 </head>
 <body style="background-color: rgb(239, 222, 180);" >
