Updated the page design or fixed layout

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     Welcome to Kemet (Egypt)</h1>
 
     <pre>
-<p style="font-size:large;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><img src="luxor.jpg" style="float: right;width: 400px;height: 200px;">
+<p style="font-size:large;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><img src="luxor.jpg" style="float:inline-end;width: 400px;height: 200px;">
     Ancient Egypt 🏺 comes alive in Luxor, a city that stands as an open-air museum, overflowing
 with the treasures of Pharaonic civilization 👑. Here, the grandeur of temples like Karnak and 
 Luxor stands tall, bearing witness to the glories of the past and the might of the Pharaohs. 
@@ -57,7 +57,7 @@ on an enchanting journey through history.From the Valley of the Kings 𓋞, wher
 <br>
 <h2><i><b>Karnak Temple Complex</b></i></h2>
 <pre>
-<p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: large;"> <img src="karnak.jpg" alt="Karnak temple"style="float:left; width:400px;height:200px">
+<p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: large;"> <img src="karnak.jpg" alt="Karnak temple"style="float:inline-start; width:400px;height:200px">
     The Karnak Temple Complex is the largest religious building ever constructed and a monumental
      tribute to the Egyptian gods.Dedicated primarily to the Theban Triad, with Amun-Ra as its chief 
      deity, Karnak was built and expanded over a period of morethan 1,000 years. Its highlight is the
@@ -67,7 +67,7 @@ on an enchanting journey through history.From the Valley of the Kings 𓋞, wher
 </pre>
 <h2 style="text-align:right;"><i><b>Valley of the Kings</b></i></h2>
 <pre>
-    <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: large;"><img src="valley.jpg"alt="valley of kings" style="float:right; width:400px;height: 220px;">
+    <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: large;"><img src="valley.jpg"alt="valley of kings" style="float:inline-end; width:400px;height: 220px;">
 Located on the West Bank, the Valley of the Kings served as the royal necropolis for pharaohs, queens, 
  and high priests of the New Kingdom.To protect their treasures and eternal rest, kings like Tutankhamun
  and Ramses II were buried in deep, rock-cut tombs instead of pyramids. A visit to the Valley offers a 
